--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                     <li>3 day tour</li>
                                     <li>Up to 30 people</li>
                                     <li>2 tour guides</li>
-                                    <li>Sleep in cozy hotels</li>
+                                    <li>Sleep in cosy hotels</li>
                                     <li>Difficulty: easy</li>
                                 </ul>
                             </div>
@@ -216,9 +216,31 @@
             </div>
 
             <div class="u-center-text u-margin-top-huge">
-                <a href="#" class="btn btn--green">Dicover all tours</a>
+                <a href="#" class="btn btn--green">Discover all tours</a>
             </div> 
 
+        </section>
+
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, dolores atque architecto vero deserunt et odio maiores optio asperiores ut reprehenderit qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, dolores atque architecto vero deserunt et odio maiores optio asperiores ut reprehenderit qui.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
